# stat-class

./: .gitignore  pyproject.toml
stat_class/chapter1/: party.ipynb  partyData.json  partyGraph.ipynb  partyTable.ipynb  sample.py
stat_class/chapter3/: sigma.ipynb
stat_class/chapter4/: set1.csv  set2.csv
stat_class/chapter5/: data.json
tests/: test_stat_class.py
