[tool.poetry]
name = "stat-class"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8-nb = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
